cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
project(threading C CXX)
include_directories(src)
#~ find_package(Catch2 REQUIRED)
FIND_PACKAGE ( Threads  REQUIRED )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -pthread ")
add_executable(threading_tests src/threading_tests.cpp)
add_executable(unit_tests src/unit_tests.cpp)
