cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
project(threading C CXX)
include_directories(src)
FIND_PACKAGE ( Threads  REQUIRED )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -pthread ")
add_executable(threading_examples src/threading_examples.cpp)
add_executable(unit_tests src/tests/unit_tests.cpp)
